version/0.23/_sources/api/solver/_autosummary/settings/vaporization_temperature.rst.txt
:orphan:

.. _vaporization_temperature:

vaporization_temperature
========================

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.vaporization_temperature.vaporization_temperature
    :show-inheritance:

.. rubric:: Attributes

====================================================   ====================================================

Attribute                                                                                           Summary

====================================================   ====================================================
:ref:`option <option_12>`                                  Select method for calculating material property.

:ref:`value <value_11>`                                                Specify the constant property value.

:ref:`user_defined_function <user_defined_function>`                         Specify user defined function.

====================================================   ====================================================

.. rubric:: Included in:

============================================================   ===============================================

Parent                                                                                                 Summary

============================================================   ===============================================
:ref:`fluid_child <fluid_child>`                                                 'child_object_type' of fluid.

:ref:`material_child <material_child>`                                        'child_object_type' of material.

:ref:`droplet_particle_child <droplet_particle_child>`                'child_object_type' of droplet_particle.

:ref:`combusting_particle_child <combusting_particle_child>`       'child_object_type' of combusting_particle.

:ref:`material_child <material_child_1>`                                      'child_object_type' of material.

============================================================   ===============================================

