version/0.27/_sources/api/solver/_autosummary/settings/vaporization_temperature.rst.txt
:orphan:

.. _vaporization_temperature:

vaporization_temperature
========================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.vaporization_temperature
    :show-inheritance:

.. rubric:: Attributes

====================================================   ===========================================

Attribute                                                                                  Summary

====================================================   ===========================================
:ref:`option <option_26>`                                         Select material property method.

:ref:`value <value_15>`                                           Specify constant property value.

:ref:`user_defined_function <user_defined_function>`       Specify user-defined property function.

====================================================   ===========================================

.. rubric:: Included in:

============================================================   ===============================================

Parent                                                                                                 Summary

============================================================   ===============================================
:ref:`fluid_child <fluid_child>`                                                 'child_object_type' of fluid.

:ref:`volumetric_species_child <volumetric_species_child>`          'child_object_type' of volumetric_species.

:ref:`material_3_child <material_3_child>`                                    'child_object_type' of material.

:ref:`droplet_particle_child <droplet_particle_child>`                'child_object_type' of droplet_particle.

:ref:`combusting_particle_child <combusting_particle_child>`       'child_object_type' of combusting_particle.

:ref:`particle_species_child <particle_species_child>`                'child_object_type' of particle_species.

:ref:`material_4_child <material_4_child>`                                    'child_object_type' of material.

============================================================   ===============================================

